# qtc-android-cmake

./: CMakeLists.txt  QtAndroid.cmake  QtAndroid_BuildAPK.cmake.in  main.cpp  test.sh  test_cmake.pro
android/: androidtoolchain.cmake  build.gradle
